# vfat-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: CI.yml
examples/: simple.rs
src/: cache.rs  cluster_id.rs  cluster_reader.rs  cluster_writer.rs  device.rs  error.rs  extended_bios_parameter_block.rs  fat_entry.rs  fat_reader.rs  fat_writer.rs  io.rs  lib.rs  lock.rs  macros.rs  mbr.rs  sector_id.rs  timestamp.rs  utils.rs  vfat.rs
src/api/: directory.rs  entry.rs  file.rs  metadata.rs  mod.rs  timestamp.rs
src/api/directory_entry/: long_file_name_entry.rs  mod.rs  regular_entry.rs  unknown_entry.rs
src/api/directory_entry/formats/: entry_id.rs  mod.rs
src/cluster/: cluster_chain.rs  cluster_reader.rs  cluster_writer.rs  mod.rs
src/fat_table/: fat_entry.rs  fat_reader.rs  fat_writer.rs  mod.rs
src/formats/: cluster_id.rs  extended_bios_parameter_block.rs  mod.rs  path.rs  timestamp.rs
src/os_interface/: directory.rs  entry.rs  file.rs  metadata.rs  mod.rs  timestamp.rs
src/os_interface/directory_entry/: long_file_name_entry.rs  mod.rs  regular_entry.rs  unknown_entry.rs
src/os_interface/directory_entry/formats/: attributes.rs  entry_id.rs
tests/: common.rs  mbr.rs  setup.sh  vfat.rs
tests/block_devs/: array_blockdev.rs  file_blockdev.rs  mod.rs
