[package]
name = "ntfs-rs"
version = "0.1.0"
authors = ["Federico Ponzi <me@fponzi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
snafu = {version = "~0.7", default-features = false}
binread = {version = "~2.2", default-features = false, features = ["const_generics"]}
