[package]
name = "vfat-rs"
version = "0.1.0"
authors = ["Federico Ponzi <me@fponzi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
snafu = {version = "~0.7", default-features = false}
binrw = {version = "~0.8", default-features = false}
regex = "1.4.6"
uluru = "1.1.1"

[dev-dependencies]
env_logger = "~0.8"
rand = "~0.8"
serial_test = "0.5.1"
lazy_static = "~1.4"
